# accelerated-discovery

./: .env.example  .env_copy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEEP_SEARCH_IMPROVEMENTS_PR_GUIDE.md  INTEGRATION_TESTING.md  MANIFEST.in  PR_GUIDE.md  README.md  README_STANDALONE.md  demo_deep_search_auto.py  docker-compose.yml  e2e-ajinkya-ORIG.py  e2e-ajinkya.py  e2e-deep-research.py  pyproject.toml  requirements.txt  run_fs.sh  setup.py  test_lit_agent.json  workshop_setup.ipynb
.deepeval/: .deepeval  .deepeval_telemetry.txt
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: cicd.yml  deploy.yml  integration-branch-sync.yml
accelerated_discovery/adam_core/: globals.py
accelerated_discovery/flows/: literature_review_flow.py
accelerated_discovery/frontend/: literature_review.py  streamlit_utils.py
accelerated_discovery/models/: document.py  question_plan.py
accelerated_discovery/tools/: literature_search_utils.py
accelerated_discovery/utils/: file_system_utils.py
akd/: __init__.py  _base.py  common_types.py  config.py  errors.py  guardrails.py  serializers.py  structures.py  utils.py
akd/agents/: __init__.py  _base.py  code_search.py  deep_research.py  dummy_agent.py  extraction.py  factory.py  guardrails.py  intents.py  litsearch.py  query.py  relevancy.py  report_quality_validator.py  schemas.py  search.py  storm.py
akd/configs/: data_search_config.py  gap_config.py  guardrails_config.py  lit_config.py  planner_config.py  project.py  prompts.py  storm_config.py
akd/mapping/: README.md  __init__.py  mappers.py
akd/nodes/: planner.py  states.py  states_v2.py  supervisor.py  templates.py  workflow_template.py  workflow_templates.py
akd/planner/: README.md  __init__.py  agent_analyzer.py  agent_node_template.py  core.py  data_flow.py  langgraph_builder.py  langgraph_state.py  orchestrator.py  research_planner.py  state_adapters.py  workflow_planner.py
akd/tools/: __init__.py  _base.py  code_search.py  fact_check.py  fact_reasoner_tool.py  factory.py  granite_guardian_tool.py  link_relevancy_assessor.py  misc.py  relevancy.py  search.py  source_validator.py  text_splitter.py  utils.py  vector_database.py  vector_db_tool.py
akd/utils/: __init__.py  logging.py  serialization.py
akd/web/: test.py  test1.py  web.py
attic/: context_retriever.py  decontextualizer.py  nli.py  nli_scorer.py  nli_scorer_prompt.py  rits.py
backend/: README.md  api-langserve.py  api.py  e2e_agents_node_template.py  main.py  planner.py  test.py  test_apis.py  test_langserve_api.py  test_search_tool.py  test_simple.py
backend/ideas/: IMPLEMENTATION_PLAN.md  langraph_react.md
backend/marimo/: e2e-agents-node-template-marimo.py  langgraph-session-demonstration-marimo.py
config/: gap_agent.toml  lit_agent.toml
config/searxng/: docker-compose-sagemaker.yml  docker-compose.yml  settings.yml
deployment/: README.md  aws-config.env.example  deploy-ecs.sh  docker-compose-public.yml  ec2-user-data.sh  ecs-task-definition-template.json  ecs-task-definition.json  nginx.conf
docs/: deep_search_diagram.md  design_philosophy.md  granite-guardian-setup.md  issn_whitelist.json  issn_whitelist_full.json  issn_whitelist_map.json  node-template.md  planner_architecture_diagram.md  pubs_whitelist.json  searxng-aws-deployment.md  standalone-setup.md
examples/: akd_research_workflow_demo_v2.py  apollo14.json  askh.json  askhist-langchain-doc.json  bio-fischer-deco.json  bio-labeled1.json  book.json  code_search_agent_example.py  code_search_test.py  e2e_agents_node_template_v1.py  eli5.json  enhanced_node_template_example.py  graph1.json  graph2.json  graph3.json  graph4.json  llm_planning_demo.py  premises.pkl  results.json  simple_source_validation_example.py  source_validation_pipeline_test.py  source_validation_test.py  test3.json  test4.json  test5.json  tim_fischer.json  tim_fischer_a.json  tim_fischer_graph_v2a.json
examples/data_search/: README.md  STARTUP_GUIDE.md  pyproject.toml
examples/data_search/backend/: main.py  requirements.txt  search_progress.py  websocket_handler.py
examples/data_search/frontend/: .env.sample  package-lock.json  package.json
examples/data_search/frontend/public/: index.html
examples/data_search/frontend/src/: App.css  App.js  PasswordModal.js  PasswordProvider.js  config.js  index.js
fact_reasoner/: .gitignore  run_fb.sh  run_fr_bert.sh
fact_reasoner/attic/: atomizer.py  fact_reasoner.py  prompts.py
fact_reasoner/examples/: bio-fischer-orig.json  bio-flaherty-orig-data.json  bio-labeled.json  bio-unlabeled.json  graph5.json  hypothesis.pkl  tim_fischer_graph_v1.json  toy.json
fact_reasoner/fm_factual/: atom_extractor.py  fact_score.py
fm_factual/: atom_reviser.py  context_summarizer.py  fact_reasoner.py  fact_score.py  fact_verify.py  llm_handler.py  search_api.py  utils.py
lit-agents-akd/: .env.example  .gitignore  README.md  requirements.txt  storm.ipynb  storm_step_by_step.ipynb
lit-agents-akd/agent/: config.py  nodes.py  state.py  storm_agent.py  tools.py
lit-agents-akd/samples/: ml_oilpalm_plantation_mgmt.md
mcp/: README.md  akd_mcp_server.py  claude_desktop_config_example.json  demo_client.py  test_mcp_client.py
notebooks/: deep_search_testing.ipynb  deepeval_example.ipynb  end-2-end-test-v1.py  end-to-end-debug.ipynb  search-results-dag-evaluation.ipynb  test_gap_agent.ipynb
scripts/: build_issn_whitelist.py  convert_excel_to_json.py  deep_search_testing.py  demo_deep_search.py  demo_deep_search_with_fact_check.py  deploy-searxng-ecs.sh  push_searxng_to_ecr.sh  run_deepsearch_with_whitelist.py  run_lit_agent.py  setup_standalone.sh  test_journal_validator.py
searxng/: Dockerfile  docker-compose-ecr.yml  docker-compose.yml  searxng_settings.yml  settings.yml
searxng/settings.yml/: searxng_settings.yml
test/web/: test_web.py
tests/: code_search_tool_test.py  lit_agent_output.json  test_deepeval_example.py  test_guardrails_decorator.py  test_lit_agent.py  test_lit_agent_cache.json  test_rate_limiter.py
tests/agents/: test_base_agents.py
tests/mapping/: __init__.py  (+1 more)
(+177 files in other folders)
