[project]
name = "accelerated-discovery"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomic-agents>=1.1.0",
    "chromadb>=1.0.9",
    "crawl4ai>=0.5.0.post4",
    "duckduckgo-search>=8.0.1",
    "gravis>=0.1.0",
    "html2text>=2025.4.15",
    "instructor>=1.7.7",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.48",
    "langchain-google-community>=2.0.7",
    "langchain-huggingface>=0.2.0",
    "langchain-milvus>=0.1.7",
    "langgraph>=0.4.0",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.1",
    "markdownify>=1.1.0",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pgmpy>=1.0.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.25.4",
    "pypdf>=5.5.0",
    "pytorch-lightning>=2.5.1.post0",
    "readability-lxml>=0.8.1",
    "requests>=2.32.3",
    "spacy>=3.8.5",
    "thefuzz>=0.22.1",
    "vllm>=0.8.5.post1",
    "wikipedia>=1.4.0",
]
