[project]
name = "accelerated-discovery"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomic-agents>=1.1.0",
    "crawl4ai>=0.5.0.post4",
    "duckduckgo-search>=8.0.1",
    "instructor>=1.7.7",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.48",
    "langchain-google-community>=2.0.7",
    "langchain-huggingface>=0.2.0",
    "langgraph>=0.4.0",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.1",
    "markdownify>=1.1.0",
    "openai>=1.75.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.25.4",
    "readability-lxml>=0.8.1",
    "requests>=2.32.3",
    "wikipedia>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["akd", "scripts"]

[dependency-groups]
test = [
    "deepeval>=2.9.7",
    "pytest>=8.3.5",
]
