[project]
name = "akd-data-search-demo"
version = "0.1.0"
description = "Minimal AKD Data Search Demo - NASA Earth science data discovery with natural language queries"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "AKD Team"}
]
keywords = ["earth-science", "data-search", "cmr", "nasa", "scientific-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.12,<4.0"

# Minimal dependencies for data search functionality only
dependencies = [
    # FastAPI Web Framework (for backend demo server)
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "websockets==12.0",

    # Core AKD Framework Dependencies
    "instructor>=1.7.7",          # For structured LLM outputs (InstructorBaseAgent)
    "loguru>=0.7.3",             # For contextual logging
    "openai>=1.75.0",            # For LLM interactions in scientific components
    "pydantic>=2.10.3",          # For schema validation and data models
    "pydantic-settings>=2.9.1",  # For configuration management
    "python-dotenv>=1.0.0",      # For environment variable loading
    "httpx>=0.28.1",             # For async HTTP requests to MCP server
    "requests>=2.32.3",          # For fallback HTTP client
    "tenacity>=9.1.2",           # For retry logic with exponential backoff

    # Additional dependencies needed by akd core modules
    "gdown>=5.2.0",              # Required by akd.utils.__init__.py
    "langchain-core>=0.3.48",    # Required by akd.utils (LangchainToolMixin)
]

[project.urls]
Homepage = "https://github.com/NASA-IMPACT/accelerated-discovery"
Repository = "https://github.com/NASA-IMPACT/accelerated-discovery"
Issues = "https://github.com/NASA-IMPACT/accelerated-discovery/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Don't package the demo backend/frontend - they're not Python packages
exclude = ["backend*", "frontend*"]

# Note: This is a minimal subset of the full AKD framework
# For the complete framework with literature search, STORM, and all agents,
# use the main pyproject.toml in the repository root
